# sot-sequence-grabber

./: CMakeLists.txt
src/: sot-sequence-grabber.cpp  sot-sequence-grabber.h
